--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-helmet": "^6.1.0",
     "react-mui-sidebar": "^1.3.8",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
