--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-mui-sidebar": "^1.3.8",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
