--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/system": "^5.14.11",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.35.0",
+    "chroma-js": "^3.0.0",
     "firebase": "^10.13.1",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
